--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -26,35 +26,55 @@
 			</div>
 		</div>
 		<nav class="white valign-wrapper">
-			<div class="container-trim">
-				<div class="left">
-					<a class="brand-logo black-text" href="<%= root_path %>">
-					<div class="left">
-						<span>Shopify</span>
-					</div>
-				</a>
-				</div>
-				<div class="right">
-					<div class="hide-on-med-and-down">
-						<span class="category-span">
-						
-							<%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
+	       <div class="row container-trim">
+	           <div class="col s2">
+	             <div class="left">
+	             <a class="brand-logo black-text" href="<%= root_path %>">
+	               <div class="left">
+	                 <span>Shopify</span>
+	               </div>
+	             </a>
+	           </div>
+	           </div>
+						 <div class="col s1">&nbsp;</div>
+        	   <div class="col s5 search-container">
+							 <div class="search-bar">
+							 	<div class="input-field my-input" id="search-input">
+							 		<%= text_field_tag :term, "", required: "required", placeholder: "Search by product name or category", class: "black-text browser-default", id: "my-input-field" %>
+							 	</div>
+							 </div>
+							 <div class="">
+								&nbsp;
+							 </div>
+	           </div>
+	 ​
+	           <div class="col s4">
+	             <div class="hide-on-med-and-down valign-wrapper">
+								<span class="search-icon-span left">
+									<i class="large material-icons search-i" id="search">search</i>
+								</span>
+								<div class="right">
+								<span class="white-text small-text">&nbsp;|&nbsp;</span>
+								<span class="category-span">
 
-							<%= render "category_dropdown" %>
+									<%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
 
-						</span>
-						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<span class="cart-span" id="cart-span">
-							<a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total_item" class="total-item"></span></span></a>
-							<%= render "cart_dropdown" %>
-							<%= render "no_cart_dropdown" %>
-						</span>
-						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<%= auth_link %>
-					</div>
-				</div>
+									<%= render "category_dropdown" %>
 
-			</div>
-		</nav>
+								</span>
+								 <span class="white-text small-text">&nbsp;|&nbsp;</span>
+			 						<span class="cart-span" id="cart-span">
+			 							<a href="#" class="black-text cart-link">CART<span class="total-text"><span id="total_item" class="total-item"></span></span></a>
+			 							<%= render "cart_dropdown" %>
+			 							<%= render "no_cart_dropdown" %>
+			 						</span>
+			 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
+			 						<%= auth_link %>
+	             </div>
+						 </div>
+	           </div>	 ​
+	         </div>
+	       </div>
+	     </nav>
 	</div>
 </div>
