Redesign category dropdown
Why?

The old category dropdown was just a placeholder

How?

Make the display a giant one with appealing look

https://www.pivotaltracker.com/story/show/113280925
[Finishes #113280925]

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -18,16 +18,16 @@
   }
 
   .current {
-    background: $dark-cyan;
-    border: 1px solid $dark-cyan;
+    background: $dove-gray;
+    border: 1px solid $dove-gray;
     color: $my-white;
     font-style: normal;
     font-weight: bold;
   }
 
   a {
-    border: 1px solid $dark-cyan;
-    color: $my-black;
+    border: 1px solid $c-gray;
+    color: $dove-gray;
     text-decoration: none;
   }
 }
