--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -22,3 +22,11 @@ $pure-red: #ff0000;
 $disabled-shade: #dddddd;
 $faint-grey: #999999;
 $dark-blue: #000033;
+$ash-gray: #b2beb5;
+$dark-gray: #626262;
+$dark-cyan: #338574;
+$black: #000000;
+$light-gray: #e0e0e0;
+$pale-orange: #fff4e1;
+$dove-gray: #666666;
+$c-gray: #cccccc;
