Fix suggestions raised on Category PR [Finishes #113810451]
Implement suggestions made to improve on Category-Page feature:

-Aligning method calls to fit one argument per line
-Setting categories link to direct to page listing all products available.

https://www.pivotaltracker.com/story/show/113810451

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,12 +5,12 @@
   <div class="container-large">
     <div class="row nav-like-height valign-wrapper">
       <span>&nbsp;&nbsp;</span>
-      <h5 class="left"><%= @category.name %></h5>
+      <h5 class="left">All Products</h5>
       <h5 class="col l3">&nbsp;</h5>
       <div class="right">
         <%= link_to "Home", root_path %>
         <span>&nbsp;»&nbsp;</span>
-        <%= link_to @category.name, category_path %>
+        <%= link_to "All", categories_path %>
         <span>&nbsp;&nbsp;</span>
         <span class="bold">(<%= @result_length %> results)</span>
         <span>&nbsp;&nbsp;</span>
