--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -37,7 +37,7 @@
 				<div class="right">
 					<div class="hide-on-med-and-down">
 						<span class="category-span">
-							<a href="#" class="black-text category-link">CATEGORIES</a>
+							<%= link_to "CATEGORIES", categories_path, class: "black-text category-link" %>
 							<ul id="category-dropdown" class="nav-link-items">
 								<% @menu_categories.each do |category| %>
 									<li>
