--- a/app/views/products/_reviews_tab_contents.html.erb
+++ b/app/views/products/_reviews_tab_contents.html.erb
@@ -1,83 +1,25 @@
 <ul class="collection">
-        <li class="collection-item avatar">
-          <!-- <img src="images/yuna.jpg" alt="" class="circle"> -->
-          <div class="row">
-            <div class="col m10">
-              <i class="material-icons circle blue">perm_identity</i>
-              <span class="title">Yusuf</span>
-              <p>
-                Explore the various collections of Firetrap on Konga.com at the best prices with fast delivery service nationwide.
-              </p>
-            </div>
-            <div class="col m2">
-              <a href="#!" class="secondary-content">
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-              </a>
-            </div>
-          </div>
-        </li>
-        <li class="collection-item avatar">
-          <div class="row">
-            <div class="col m10">
-              <i class="material-icons circle yellow">perm_identity</i>
-          <span class="title">Tobi</span>
+  <% @reviews.each do |review| %>
+    <li class="collection-item avatar">
+      <div class="row">
+        <div class="col m10">
+          <i class="material-icons circle blue">perm_identity</i>
+          <span class="title"><%= review.user.first_name %></span>
           <p>
-            Explore the various collections of Firetrap on Konga.com at the best prices with fast delivery service nationwide.
+            <%= review.comment %>
           </p>
-          </div>
-            <div class="col m2">
-              <a href="#!" class="secondary-content">
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
+        </div>
+        <div class="col m2">
+          <a href="#!" class="secondary-content">
+            <% review.rating.times do %>
+              <span class="filled-in-star">&#9734;</span>
+            <% end %>
+            <% (5 - review.rating).times do %>
+              <span>&#9734;</span>
+            <% end %>
           </a>
-            </div>
-          </div>
-        </li>
-        <li class="collection-item avatar">
-          <div class="row">
-            <div class="col m10">
-              <i class="material-icons circle green">perm_identity</i>
-          <span class="title">Emmanuel</span>
-          <p>
-            Explore the various collections of Firetrap on Konga.com at the best prices with fast delivery service nationwide. collections of Firetrap on Konga.com at the best prices with fast delivery service nationwide
-          </p>
-          </div>
-            <div class="col m2">
-              <a href="#!" class="secondary-content">
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-            <span>&#9734;</span>
-          </a>
-            </div>
-          </div>
-        </li>
-        <li class="collection-item avatar">
-          <div class="row">
-            <div class="col m10">
-              <i class="material-icons circle red">perm_identity</i>
-            <span class="title">Muyiwa</span>
-            <p>
-              Explore the various collections of Firetrap on Konga.com at the best prices with fast delivery service nationwide.
-            </p>
-            </div>
-            <div class="col m2">
-              <a href="#!" class="secondary-content">
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-                <span>&#9734;</span>
-              </a>
-            </div>
-          </div>
-        </li>
-      </ul>
+        </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
