Update Cart from the cart page.
Why?
When a customer is done add items to cart, and proceed to cart
He/she should be able to remove items from the cart and continue the checkout process with the item and quantity in the cart

How?
Use cookies hash to store the items added to the cart so as to build the cart order items form from it.

https://www.pivotaltracker.com/story/show/112511965

--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -27,7 +27,7 @@ a {
 .section-text {
   font-size: 0.6em;
   font-weight: $section-text-size;
-  overflow: none;
+  overflow: unset;
   padding: 0.65em;
   text-align: center;
   text-transform: uppercase;
@@ -73,17 +73,6 @@ a {
   padding: 1.5em 0 0;
 }
 
-.total-item {
-  border-radius: 50%;
-  font-size: 12px;
-  height: 18px;
-  line-height: 18px;
-  position: absolute;
-  right: -16.5px;
-  top: -15px;
-  width: 18px;
-}
-
-.total-text {
-  color: $my-white;
+.no-order-item {
+  min-height: 15em;
 }
