--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
             </div>
 
             <div class="">
-              <%= f.label :first_name, "Last Name" %>
+              <%= f.label :last_name, "Last Name" %>
               <span class="field-error" id="last-name-error"></span>
               <%= f.text_field :last_name, required: "required", minlenght: 2, class: "" %>
             </div>
