--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,4 +1,26 @@
 .order-forms-container {
-  margin: 1em 0;
-  min-height: 23em;
+  margin: 1em 0 8em;
+  min-height: 30em;
+}
+
+.quantity-field {
+  height: auto !important;
+}
+
+.order-checkout-btn-div {
+  margin: 4em 0;
+}
+
+.empty-cart-btn {
+  background-color: transparent;
+  box-shadow: none;
+  font-size: 12px;
+}
+
+.empty-cart-btn:hover {
+  background-color: $light-gray;
+}
+
+.total-amount-div {
+  margin: 3em;
 }
